--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ p {color: ivory;font-size: 30px;}
 font-family: Brush Script MT;
 text-align: center;
 }
-
 #titlebox {
 background-color: ivory;
 height: 90px;
@@ -21,6 +20,7 @@ padding: 14px 16px;
 <title>Page Title</title>
 </head>
 <body>
+  <img src="ShanaAhmed/orchids.jpg" alt="picture of orchids"/>
 <div id=titlebox>
 <h1>Flower shop </h1>
 </div>
