--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ padding: 14px 16px;
 <title>Page Title</title>
 </head>
 <body>
-  <img src="ShanaAhmed/orchids.jpg" alt="picture of orchids"/>
+  <img src="/ShanaAhmed/orchids.jpg" alt="picture of orchids"/>
 <div id=titlebox>
 <h1>Flower shop </h1>
 </div>
